package authenticate;

public interface IAccount {
    public boolean isAdmin();
    public boolean isGuest();
}
